# hid

./: README.md  hid.cabal  stack.yaml  turns.txt
src/Chap1/: HitParade.hs  OrderedList.hs  Vocab1.hs  Vocab2.hs  Vocab3.hs
src/Chap2/: RadarAntenna.hs
src/Chap5/: Bootstrap.hs  Lardo.hs  MC.hs  Mealy.hs  MooreComonad.hs  Stock.hs
src/Chap6/: AppRTWTST.hs  AppTypes.hs  DirTree.hs  DiskUsage.hs  EvalRPN.hs  Main.hs  Utils.hs
