name:                hid
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hid#readme
license:             BSD3
license-file:        LICENSE
author:              Andrea Basile
maintainer:          andrea.r.basile@gmail.com
copyright:           2021 Andrea Basile
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
 
executable hid
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable vocab1
  hs-source-dirs:      src/Chap1
  main-is:             Vocab1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , transformers

executable vocab2
  hs-source-dirs:      src/Chap1
  main-is:             Vocab2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , protolude

executable vocab3
  hs-source-dirs:      src/Chap1
  main-is:             Vocab3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , fmt

-- test-suite ordered-list-test
--   type: exitcode-stdio-1.0
--   main-is: OrderedList.hs
--   hs-source-dirs: src/Chap1
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
--   build-depends:
--       QuickCheck
--     , base >=4.7 && <5
--     , fingertree
--     , protolude
--     , hspec
--   default-language: Haskell2010

test-suite hit-parade-test
  type: exitcode-stdio-1.0
  main-is: HitParade.hs
  hs-source-dirs: src/Chap1
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , fingertree
    , protolude
    , hspec
    , containers
  default-language: Haskell2010

executable radar
  hs-source-dirs:      src/Chap2
  main-is:             RadarAntenna.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fmt
                     , text
                     , random >= 1.2.0